--- a/bookmarklets/index.html
+++ b/bookmarklets/index.html
@@ -7,38 +7,28 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-   <div class="navbar">
    <body>
       <nav>
          <div class="logo">
             <img src="nblock-games.svg" draggable="false"></img>
+            Brand
          </div>
          <input type="checkbox" id="click">
          <label for="click" class="menu-btn">
          <i class="fas fa-bars"></i>
          </label>
          <ul>
-            <li><a class="active" href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/games/">Games</a></li>
             <li><a href="https://nblock.cyclic.app">Proxy</a></li>
-            <li><a href="/bookmarklets/">Bookmarklets</a></li>
-            <li><a href="/contact/">Contact</a></li>
+            <li><a class="active" href="/bookmarklets/">Bookmarklets</a></li>
+            <li><a href="#">Contact</a></li>
          </ul>
       </nav>
-   </div>
       <div class="content">
          <div>
-            nblock games
-         </div>
-          <div class="slogan-parent">
-            <div class="slogan-child">
-            Your favorite unblocked games, all in one place.
-         </div>
-         <div class="buttons">
-            <a href="/games/" class="button">Play Now!</a>
-          </div>
-      </div>
 
+          </div>
       </div>
    </body>
 </html>
