--- a/contact/index.html
+++ b/contact/index.html
@@ -21,6 +21,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/games/">Games</a></li>
             <li><a href="https://nblock.cyclic.app">Proxy</a></li>
+            <li><a href="/bookmarklets/">Bookmarklets</a></li>
             <li><a class="active" href="#">Contact</a></li>
          </ul>
       </nav>
