--- a/bookmarklets/index.html
+++ b/bookmarklets/index.html
@@ -12,7 +12,6 @@
       <nav>
          <div class="logo">
             <img src="nblock-games.svg" draggable="false"></img>
-            Brand
          </div>
          <input type="checkbox" id="click">
          <label for="click" class="menu-btn">
@@ -180,6 +179,19 @@
                </div>
                <div id='code12'>
                   <pre>javascript:(function(){window.s0=document.createElement(&#039;script&#039;);window.s0.setAttribute(&#039;type&#039;,&#039;text/javascript&#039;);window.s0.setAttribute(&#039;src&#039;,&#039;https://bookmarkify.it/bookmarklets/59042/raw&#039;);document.getElementsByTagName(&#039;body&#039;)[0].appendChild(window.s0);})();</pre>
+               </div>
+            </div>
+            <div id='toastNotif' class='tNtf'></div>
+            <script src="copypaste.js"></script>
+            <div class='K2_CBox'>
+               <div class='CB_Heading'>
+                  <span>ㅤDiscord Experiments</span>
+                  <button id='copy13' class='C_box_main' onclick="copyC('copy13','code13')">
+                  <i class='CBox_icn'></i>
+                  </button>
+               </div>
+               <div id='code13'>
+                  <pre>javascript:function _0x4617() {    const _0x3a1b77 = [&#039;ExperimentStore&#039;, &#039;actionHandler&#039;, &#039;DeveloperExperimentStore&#039;, &#039;CONNECTION_OPEN&#039;, &#039;find&#039;, &#039;6CfKffO&#039;, &#039;random&#039;, &#039;default&#039;, &#039;_dispatcher&#039;, &#039;values&#039;, &#039;_dependencyGraph&#039;, &#039;3btiloZ&#039;, &#039;isDeveloper&#039;, &#039;702432xoFVpt&#039;, &#039;nodes&#039;, &#039;_actionHandlers&#039;, &#039;__proto__&#039;, &#039;name&#039;, &#039;2965750JhujrI&#039;, &#039;exports&#039;, &#039;550483LBPAtn&#039;, &#039;47920XFvkzt&#039;, &#039;369RkfhiS&#039;, &#039;push&#039;, &#039;getCurrentUser&#039;, &#039;getUsers&#039;, &#039;webpackChunkdiscord_app&#039;, &#039;log&#039;, &#039;OVERLAY_INITIALIZE&#039;, &#039;660955wpczgK&#039;, &#039;1213058bxYPyz&#039;, &#039;1083812LuAyrl&#039;];    _0x4617 = function() {        return _0x3a1b77;    };    return _0x4617();}function _0x9e2c(_0x4cb4cc, _0x518713) {    const _0x461781 = _0x4617();    return _0x9e2c = function(_0x9e2c03, _0x13976e) {        _0x9e2c03 = _0x9e2c03 - 0x131;        let _0x8f2fa6 = _0x461781[_0x9e2c03];        return _0x8f2fa6;    }, _0x9e2c(_0x4cb4cc, _0x518713);}const _0x1c236b = _0x9e2c;(function(_0x40bc5a, _0x38f09b) {    const _0x271397 = _0x9e2c,        _0xea555 = _0x40bc5a();    while (!![]) {        try {            const _0xe75c45 = -parseInt(_0x271397(0x142)) / 0x1 + parseInt(_0x271397(0x13b)) / 0x2 + parseInt(_0x271397(0x139)) / 0x3 * (parseInt(_0x271397(0x14d)) / 0x4) + parseInt(_0x271397(0x14b)) / 0x5 * (parseInt(_0x271397(0x133)) / 0x6) + parseInt(_0x271397(0x14c)) / 0x7 + parseInt(_0x271397(0x143)) / 0x8 * (parseInt(_0x271397(0x144)) / 0x9) + -parseInt(_0x271397(0x140)) / 0xa;            if (_0xe75c45 === _0x38f09b) break;            else _0xea555[&#039;push&#039;](_0xea555[&#039;shift&#039;]());        } catch (_0x53dfcf) {            _0xea555[&#039;push&#039;](_0xea555[&#039;shift&#039;]());        }    }}(_0x4617, 0x4fa2a));let wpRequire;window[_0x1c236b(0x148)][_0x1c236b(0x145)]([    [Math[_0x1c236b(0x134)]()], {},    _0x26840e =&gt; {        wpRequire = _0x26840e;    }]), mod = Object[_0x1c236b(0x137)](wpRequire[&#039;c&#039;])[_0x1c236b(0x132)](_0x412b80 =&gt; typeof _0x412b80?.[_0x1c236b(0x141)]?.[%27Z%27]?.[_0x1c236b(0x13a)] !== %27undefined%27), usermod = Object[_0x1c236b(0x137)](wpRequire[%27c%27])[_0x1c236b(0x132)](_0x1d88a6 =&gt; _0x1d88a6?.[_0x1c236b(0x141)]?.[_0x1c236b(0x135)]?.[_0x1c236b(0x147)]), nodes = Object[%27values%27](mod[_0x1c236b(0x141)][%27Z%27][_0x1c236b(0x136)][_0x1c236b(0x13d)][_0x1c236b(0x138)][_0x1c236b(0x13c)]);try {    nodes[_0x1c236b(0x132)](_0x75be37 =&gt; _0x75be37[%27name%27] == _0x1c236b(0x14e))[_0x1c236b(0x14f)][_0x1c236b(0x14a)]({        %27user%27: {            %27flags%27: 0x1        }    });} catch (_0x378ba0) {}oldGetUser = usermod[_0x1c236b(0x141)][_0x1c236b(0x135)][_0x1c236b(0x13e)][_0x1c236b(0x146)], usermod[%27exports%27][_0x1c236b(0x135)][_0x1c236b(0x13e)][%27getCurrentUser%27] = () =&gt; ({    %27isStaff%27: () =&gt; !![]}), nodes[_0x1c236b(0x132)](_0x276616 =&gt; _0x276616[_0x1c236b(0x13f)] == _0x1c236b(0x150))[%27actionHandler%27][_0x1c236b(0x131)](), usermod[%27exports%27][_0x1c236b(0x135)][_0x1c236b(0x13e)][_0x1c236b(0x146)] = oldGetUser;function cred() {    const _0x2df1c2 = _0x1c236b;    console[_0x2df1c2(0x149)](%27Made\x20By\x20Payson\x20Holmes%27);}cred();</pre>
                </div>
             </div>
             <div id='toastNotif' class='tNtf'></div>
