--- a/contact/index.html
+++ b/contact/index.html
@@ -4,14 +4,13 @@
       <meta charset="utf-8">
       <title>nblock Games</title>
       <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
       <nav>
          <div class="logo">
             <img src="nblock-games.svg" draggable="false"></img>
-            Brand
          </div>
          <input type="checkbox" id="click">
          <label for="click" class="menu-btn">
@@ -27,7 +26,21 @@
       </nav>
       <div class="content">
          <div>
-
+            <div class="square">
+               <div class="text">
+               <p>About Me:</p>
+               <h6>13 year old aspiring frontend developer <i class="fa-sharp fa-solid fa-laptop"></i></h6>
+               <h6>Email: jahuho@proton.me <i class="fa-solid fa-envelope"></i></h6>
+               <h6>Discord: nine#8174 <i class="fa-brands fa-discord"></i></h6>
+               <h6>Github: <a href="https://github.com/nine4x/">nine4x</a> <i class="fa-brands fa-github"></i></h6>
+            </div>
+            <div class="name">
+               <p>nine4</p>
+            </div>
+            <div class="pfp">
+               <img src="profile.png" draggable="false"></img>
+            </div>
+            </div>
           </div>
       </div>
    </body>
