da loading animation

--- a/contact/index.html
+++ b/contact/index.html
@@ -24,6 +24,14 @@
             <li><a class="active" href="#">Contact</a></li>
          </ul>
       </nav>
+      <div class="loader-container">
+         <div class="loader"></div>
+     </div>
+     <script>
+         $(window).on("load",function(){
+             $(".loader-container").fadeOut(1000);
+         });
+     </script>
       <div class="content">
          <div>
             <div class="square">
