--- a/games/index.html
+++ b/games/index.html
@@ -25,6 +25,14 @@
             <li><a href="/contact/">Contact</a></li>
          </ul>
       </nav>
+      <div class="loader-container">
+         <div class="loader"></div>
+     </div>
+     <script>
+         $(window).on("load",function(){
+             $(".loader-container").fadeOut(1000);
+         });
+     </script>
       <div class="content">
       </div>
       </div>
