--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             </ul>
          </nav>
    </div>
+   <div class="loader-container">
+      <div class="loader"></div>
+  </div>
+  <script>
+      $(window).on("load",function(){
+          $(".loader-container").fadeOut(1000);
+      });
+  </script>
    <div class="content">
    <div>
    nblock games
