--- a/games/index.html
+++ b/games/index.html
@@ -34,6 +34,7 @@
          });
      </script>
       <div class="content">
+         <p>Credit to 3kh0 for games.</p>
       </div>
       </div>
    </body>
