we do a little testing

--- a/games/index.html
+++ b/games/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <title>nblock Games</title>
       <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="games.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -34,7 +35,12 @@
          });
      </script>
       <div class="content">
-         <p>Credit to 3kh0 for games.</p>
+         <div class="games">
+             <a id="100 Player Pong" class="glink" href="./play/1/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 game)"><b>Player Pong</b></a>
+             <a id="100 Player Pong" class="glink" href="./play/1/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 game)"><b>Player Pong</b></a>
+      </div>
+      <div class="credit">
+      <p>Credit to 3kh0 for games.</p>
       </div>
       </div>
    </body>
