we do a little bit of testing

--- a/games/index.html
+++ b/games/index.html
@@ -36,7 +36,7 @@
      </script>
       <div class="content">
          <div class="games">
-             <a id="100 Player Pong" class="glink" href="./play/1/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 game)"><b>Player Pong</b></a>
+             <a id="Slope" class="glink" href="./play/slope/" target="_blank"><span class="bar"></span><img src="./images/slope.jpg" alt="Slope"><b>Slope</b></a>
              <a id="100 Player Pong" class="glink" href="./play/1/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 game)"><b>Player Pong</b></a>
       </div>
       <div class="credit">
