--- a/games/index.html
+++ b/games/index.html
@@ -37,7 +37,8 @@
       <div class="content">
          <div class="games">
              <a id="Slope" class="glink" href="./play/slope/" target="_blank"><span class="bar"></span><img src="./images/slope.jpg" alt="Slope"><b>Slope</b></a>
-             <a id="COOKIE" class="glink" href="./play/COOKIE/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 game)"><b>COOKIE</b></a>
+             <a id="COOKIE" class="glink" href="./play/COOKIE/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 game)"><b>COOKADADIE</b></a>
+             <a id="MEN" class="glink" href="./play/COOKIE/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 gafadadadame)"><b>COOKIE</b></a>
       </div>
       <div class="credit">
       <p>Credit to 3kh0 for games.</p>
