made little changes

--- a/games/index.html
+++ b/games/index.html
@@ -36,9 +36,13 @@
      </script>
       <div class="content">
          <div class="games">
-             <a id="Slope" class="glink" href="./play/slope/" target="_blank"><span class="bar"></span><img src="./images/slope.jpg" alt="Slope"><b>Slope</b></a>
-             <a id="COOKIE" class="glink" href="./play/COOKIE/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 game)"><b>COOKADADIE</b></a>
-             <a id="MEN" class="glink" href="./play/COOKIE/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="1 (2048 gafadadadame)"><b>COOKIE</b></a>
+             <a id="1v1.lol" class="glink" href="./play/1v1/" target="_blank"><span class="bar"></span><img src="./images/slope.jpg" alt="1v1.lol"><b>1v1.lol</b></a>
+             <a id="2048" class="glink" href="./play/2048/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="2048"><b>2048</b></a>
+             <a id="Basketball-Stars" class="glink" href="./play/basketball-stars/" target="_blank"><span class="bar"></span><img src="./images/basketball-stars.png" alt="Basketball Stars"><b>Basketball Stars</b></a>
+             <a id="Bloons-TD" class="glink" href="./play/bloonstd/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="Bloons TD"><b>Bloons TD</b></a>
+             <a id="Bloons-TD2" class="glink" href="./play/bloonstd2/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="Bloons TD"><b>Bloons TD 2</b></a>
+             <a id="Bloons-TD4" class="glink" href="./play/bloonstd4/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="Bloons TD 4"><b>Bloons TD 4</b></a>
+             <a id="Bloxorz" class="glink" href="./play/bloxorz/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="2048"><b>2048</b></a>
       </div>
       <div class="credit">
       <p>Credit to 3kh0 for games.</p>
