--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
          <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/games/">Games</a></li>
-            <li><a href="https://nblock.cyclic.app">Proxy</a></li>
+            <li><a href="https://nblock-proxy.cyclic.app">Proxy</a></li>
             <li><a href="/bookmarklets/">Bookmarklets</a></li>
             <li><a class="active" href="#">Contact</a></li>
          </ul>
