--- a/games/index.html
+++ b/games/index.html
@@ -21,7 +21,7 @@
          <ul>
             <li><a href="/">Home</a></li>
             <li><a class="active" href="/games/">Games</a></li>
-            <li><a href="https://nblock.cyclic.app">Proxy</a></li>
+            <li><a href="https://nblock-proxy.cyclic.app">Proxy</a></li>
             <li><a href="/bookmarklets/">Bookmarklets</a></li>
             <li><a href="/contact/">Contact</a></li>
          </ul>
@@ -36,13 +36,13 @@
      </script>
       <div class="content">
          <div class="games">
-             <a id="1v1.lol" class="glink" href="./play/1v1/" target="_blank"><span class="bar"></span><img src="./images/slope.jpg" alt="1v1.lol"><b>1v1.lol</b></a>
-             <a id="2048" class="glink" href="./play/2048/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="2048"><b>2048</b></a>
+             <a id="1v1.lol" class="glink" href="./play/1v1/" target="_blank"><span class="bar"></span><img src="./images/1v1.png" alt="1v1.lol"><b>1v1.lol</b></a>
+             <a id="2048" class="glink" href="./play/2048/" target="_blank"><span class="bar"></span><img src="./images/2048.png" alt="2048"><b>2048</b></a>
              <a id="Basketball-Stars" class="glink" href="./play/basketball-stars/" target="_blank"><span class="bar"></span><img src="./images/basketball-stars.png" alt="Basketball Stars"><b>Basketball Stars</b></a>
-             <a id="Bloons-TD" class="glink" href="./play/bloonstd/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="Bloons TD"><b>Bloons TD</b></a>
-             <a id="Bloons-TD2" class="glink" href="./play/bloonstd2/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="Bloons TD"><b>Bloons TD 2</b></a>
-             <a id="Bloons-TD4" class="glink" href="./play/bloonstd4/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="Bloons TD 4"><b>Bloons TD 4</b></a>
-             <a id="Bloxorz" class="glink" href="./play/bloxorz/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="2048"><b>2048</b></a>
+             <a id="Bloons-TD" class="glink" href="./play/bloonstd/" target="_blank"><span class="bar"></span><img src="./images/bloonstd.jpg" alt="Bloons TD"><b>Bloons TD</b></a>
+             <a id="Bloons-TD2" class="glink" href="./play/bloonstd2/" target="_blank"><span class="bar"></span><img src="./images/bloonstd2.png" alt="Bloons TD"><b>Bloons TD 2</b></a>
+             <a id="Bloons-TD4" class="glink" href="./play/bloonstd4/" target="_blank"><span class="bar"></span><img src="./images/btd4.webp" alt="Bloons TD 4"><b>Bloons TD 4</b></a>
+             <a id="Bloxorz" class="glink" href="./play/bloxorz/" target="_blank"><span class="bar"></span><img src="./images/cookie.jpg" alt="Bloxorz"><b>Bloxorz</b></a>
       </div>
       <div class="credit">
       <p>Credit to 3kh0 for games.</p>
