--- a/bookmarklets/index.html
+++ b/bookmarklets/index.html
@@ -20,7 +20,7 @@
          <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/games/">Games</a></li>
-            <li><a href="https://nblock.cyclic.app">Proxy</a></li>
+            <li><a href="https://nblock-proxy.cyclic.app">Proxy</a></li>
             <li><a class="active" href="/bookmarklets/">Bookmarklets</a></li>
             <li><a href="/contact/">Contact</a></li>
          </ul>
