--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                <li><a class="active" href="#">Home</a></li>
                <li><a href="/games/">Games</a></li>
-               <li><a href="https://nblock.cyclic.app">Proxy</a></li>
+               <li><a href="https://nblock-proxy.cyclic.app">Proxy</a></li>
                <li><a href="/bookmarklets/">Bookmarklets</a></li>
                <li><a href="/contact/">Contact</a></li>
             </ul>
